--- a/frontend/src/pages/homepage/topmovers.css
+++ b/frontend/src/pages/homepage/topmovers.css
@@ -1,15 +1,55 @@
 .staples {
   display: block;
   border: 1px solid black;
+  padding-left: 5%;
 }
 
 .message {
 
 }
 
-.moverSingularStock {
+.mover-singular-stock-red {
   border: 1px solid black;
   display: flex;
-  margin: 5%;
-  padding: 5%;
+  margin: 1%;
+  padding: 2%;
+  width: 90%;
+  height: 10%;
+
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #F2A8A8;
+}
+
+.mover-singular-stock-green {
+  border: 1px solid black;
+  display: flex;
+  margin: 1%;
+  padding: 2%;
+  width: 90%;
+  height: 10%;
+
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #88D179;
+}
+
+.price-difference {
+  border: 1px black solid;
+  border-radius: 30%;
+
+  text-align: left;
+  /* align-items: left; */
+
+  display: flex;
+  align-items: center;
+
+  padding: 20%;
+  padding-right: 100%;
+  width: 120%;
+  height: 50%;
+
+  background-color: white;
 }
