--- a/frontend/src/pages/homepage/topmovers.css
+++ b/frontend/src/pages/homepage/topmovers.css
@@ -2,19 +2,21 @@
   display: block;
   border: 1px solid black;
   padding-left: 5%;
+  align-items: center;
+  height: 80vh;
 }
 
 .message {
-
+  font-size: 35px;
 }
 
 .mover-singular-stock-red {
   border: 1px solid black;
   display: flex;
   margin: 1%;
-  padding: 2%;
-  width: 90%;
-  height: 10%;
+  padding: 1%;
+  width: 95%;
+  height: auto;
 
   justify-content: space-between;
   align-items: center;
@@ -26,9 +28,9 @@
   border: 1px solid black;
   display: flex;
   margin: 1%;
-  padding: 2%;
-  width: 90%;
-  height: 10%;
+  padding: 1%;
+  width: 95%;
+  height: auto;
 
   justify-content: space-between;
   align-items: center;
@@ -43,13 +45,20 @@
   text-align: left;
   /* align-items: left; */
 
-  display: flex;
+  /* display: flex;
   align-items: center;
 
   padding: 20%;
-  padding-right: 100%;
-  width: 120%;
-  height: 50%;
+  padding-right: 100%; */
+  width: auto;
+  height: auto;
 
   background-color: white;
+}
+
+.ticker-name {
+  text-align: left;
+  font-size: 40px;
+  border: 1px black solid;
+  margin: 0;
 }
