--- a/frontend/src/pages/stockActions/showstock.css
+++ b/frontend/src/pages/stockActions/showstock.css
@@ -8,6 +8,7 @@
 
 .show-stock {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
@@ -18,6 +19,54 @@
   margin-right: 5%;
   padding: 2% 3% 2% 2%;
 }
+
+.gemini-suggestion-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+  border: 1px black solid;
+
+  width: 60%;
+  height: 30%;
+
+  margin-top: 2%;
+}
+
+.gemini-label {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%) rotate(-15deg);
+}
+
+.gemini-recommendation {
+  font-size: 52px;
+  font-weight: bold;
+}
+
+.gemini-explanation {
+  font-size: 16px;
+  color: grey;
+  text-align: center;
+}
+
+.gemini-recommendation h1, .gemini-explanation h1 {
+  margin: 0;
+}
+
+.stock-and-graph {
+  display: flex;
+
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+
+  margin: 1%;
+}
+
 
 .all-show-stock-content {
   border: 1px black solid;
