--- a/frontend/src/pages/stockActions/showstock.css
+++ b/frontend/src/pages/stockActions/showstock.css
@@ -38,8 +38,11 @@
 .gemini-label {
   position: absolute;
   left: 10px;
-  top: 50%;
+  top: 20%;
   transform: translateY(-50%) rotate(-15deg);
+
+  color: purple;
+  font-style: italic;
 }
 
 .gemini-recommendation {
